test/chainsaw/tests/aim/service/_shared/default-model-and-template.yaml
apiVersion: aim.silogen.ai/v1alpha1
kind: AIMModel
metadata:
  name: default-testing
spec:
  image: ghcr.io/silogen/aim-dummy:0.1.3
  defaultServiceTemplate: default-testing
  # Don't auto-generate templates, since we just need a single manual one
  discovery:
    enabled: false
  resources:
    limits:
      memory: 2Gi
      #amd.com/gpu: '1'
    requests:
      cpu: '100m'
      memory: 1Gi
      #amd.com/gpu: '1'
---
apiVersion: aim.silogen.ai/v1alpha1
kind: AIMServiceTemplate
metadata:
  name: default-testing
spec:
  modelName: default-testing
  gpuSelector:
    count: 1
    model: MI300X
